# braccio_manipulator

./: CMakeLists.txt  README.md  package.xml
arduino_code/Braccio_Control_Sensing/: Braccio_Control_Sensing.ino
arduino_code/Braccio_ROS/: Braccio_ROS.ino
arduino_code/Braccio_ROS_serv/Braccio_ROS_serv/: Braccio_ROS_serv.ino
config/: controllers.yaml  joint_limits.yaml  joint_trajectory_controller.yaml  simulator_controller.yaml
include/braccio_manipulator/: blackboard.hpp  hardware_definition.hpp  hardware_interface.hpp
launch/: connect_arduino.launch  gazebo_view.launch  manipulator_controller.launch  manipulator_traj_controller.launch  view_model.launch
rviz/: urdf.rviz
src/: blackboard.cpp  hardware_interface.cpp  hardware_interface_node.cpp
urdf/: braccio_arm.gazebo.xacro  braccio_arm.transmission.xacro  braccio_arm.urdf  braccio_arm.urdf.xacro  test.urdf.xacro
