<?xml version="1.0"?>
<package>
  <name>braccio_manipulator</name>
  <version>0.0.1</version>
  <description>The braccio_manipulator package</description>

  <maintainer email="jmfajardod@gmail.com">Jose Fajardo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

  <export></export>
  
</package>